--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -150,14 +150,15 @@
       </ul>
       <!--end smartAlarming listing-->
 
-      <!-- p2000 footer -->
-      <p ng-hide="loading.smartAlarm">
+      <!-- footer -->
+      <p ng-hide="loading.smartAlarm"
+         style="margin-top:10px;">
         <small class="pull-left">
           <span class="text-warning">{{ui.planboard.lastSyncTime}}</span>&nbsp;
           <span class="muted">{{saSynced | nicelyDate}}</span>
         </small>
       </p>
-      <!-- end p2000 footer -->
+      <!-- end footer -->
 
       <button ng-click="toggleReserves=!toggleReserves"
               class="btn btn-mini pull-right"
@@ -171,10 +172,6 @@
   <!--end smartAlarming-->
 
 
-
-
-
-
   <!--Availability list-->
   <div class="row-fluid">
     <div id="sa"
@@ -182,11 +179,12 @@
 
       <div class="head">
         <h4>
-          Overzicht beschikbaarheid, {{current.group | groupIdToName}}
+          Overzicht beschikbaarheid{{current.group | groupIdToName | toTitleCase}}
           <span ng-show="(current.division != 'all')">({{current.division | divisionIdToName}})</span>
         </h4>
 
-        <div class="pull-right">
+        <div class="pull-right"
+             ng-hide="loadingAvailability">
           <!-- groups list -->
           <select ng-model="current.group"
                   ng-options="group.uuid as group.name for group in groups"
@@ -210,107 +208,106 @@
       </div>
       <hr/>
 
-      <!--<p ng-show="loading.smartAlarm" style="display:hidden">Beschikbaarheid lijst aan het laden...</p>-->
+      <p ng-show="loadingAvailability">Overzicht beschikbaarheid aan het laden...</p>
 
-      <!--smartAlarming listing-->
-      <ul id="sa-setup">
+      <!--Availability listing-->
+      <section ng-hide="loadingAvailability">
+        <ul id="sa-setup">
 
-        <li id="sa-truck">
+          <li id="sa-truck">
 
-          <div ng-repeat="(stateName, state) in states">
+            <div ng-repeat="(stateName, state) in states">
 
-            <div class="sa-member"
-                 ng-repeat="member in availability.members[stateName]"
-                 ng-show="(member.state != 'no-state')">
+              <div class="sa-member"
+                   ng-repeat="member in availability.members[stateName]"
+                   ng-show="(member.state != 'no-state')">
             <span class="sa-member-icon"
                   style="background-color: {{states[member.state].color}}">
               <strong>{{member.label}}{{$index+1}}</strong>
             </span>
-              <div class="sa-member-card">
-                <h5>{{member.name}}</h5>
-                <hr/>
-                <small>{{states[member.state].label}}</small>
-                <br/>
+                <div class="sa-member-card">
+                  <h5>{{member.name}}</h5>
+                  <hr/>
+                  <small>{{states[member.state].label}}</small>
+                  <br/>
 
-                <section ng-hide="(member.state == 'no-state')">
-                  <small><strong>{{member.start}}</strong></small>&nbsp;
-                  <small class="muted">van</small>
-                  <br>
-                  <small><strong>{{member.end}}</strong></small>&nbsp;
-                  <small class="muted">tot</small>
-                </section>
+                  <section ng-hide="(member.state == 'no-state')">
+                    <small><strong>{{member.start}}</strong></small>&nbsp;
+                    <small class="muted">van</small>
+                    <br>
+                    <small><strong>{{member.end}}</strong></small>&nbsp;
+                    <small class="muted">tot</small>
+                  </section>
 
+                </div>
               </div>
+
             </div>
 
-          </div>
+          </li>
 
+        </ul>
 
-        </li>
+        <hr ng-show="availability.members['no-state'].length > 0" />
 
-      </ul>
+        <ul id="sa-setup"
+            ng-show="availability.members['no-state'].length > 0">
 
-      <ul id="sa-setup"
-        ng-show="availability.members['no-state'].length > 0">
+          <li id="sa-truck">
 
-        <li id="sa-truck">
+            <div ng-repeat="(stateName, state) in states">
 
-          <div ng-repeat="(stateName, state) in states">
-
-            <div class="sa-member"
-                 ng-repeat="member in availability.members[stateName]"
-                 ng-hide="(member.state != 'no-state')">
+              <div class="sa-member"
+                   ng-repeat="member in availability.members[stateName]"
+                   ng-hide="(member.state != 'no-state')">
             <span class="sa-member-icon"
                   style="background-color: {{states[member.state].color}}">
               <strong>{{member.label}}{{$index+1}}</strong>
             </span>
-              <div class="sa-member-card">
-                <h5>{{member.name}}</h5>
-                <hr/>
-                <small>{{states[member.state].label}}</small>
-                <br/>
+                <div class="sa-member-card">
+                  <h5>{{member.name}}</h5>
+                  <hr/>
+                  <small>{{states[member.state].label}}</small>
+                  <br/>
 
-                <section ng-hide="(member.state == 'no-state')">
-                  <small><strong>{{member.start}}</strong></small>&nbsp;
-                  <small class="muted">van</small>
-                  <br>
-                  <small><strong>{{member.end}}</strong></small>&nbsp;
-                  <small class="muted">tot</small>
-                </section>
+                  <section ng-hide="(member.state == 'no-state')">
+                    <small><strong>{{member.start}}</strong></small>&nbsp;
+                    <small class="muted">van</small>
+                    <br>
+                    <small><strong>{{member.end}}</strong></small>&nbsp;
+                    <small class="muted">tot</small>
+                  </section>
 
+                </div>
               </div>
+
             </div>
 
-          </div>
+          </li>
 
+        </ul>
 
-        </li>
+      </section>
+      <!--end Availability listing-->
 
-      </ul>
-      <!--end smartAlarming listing-->
-
-      <!-- p2000 footer -->
+      <!-- footer -->
       <p>
         <hr/>
         <small class="pull-left"
-          style="margin-top: -15px">
+          style="margin-top: -10px"
+          ng-hide="loadingAvailability">
           <span class="text-warning">{{ui.planboard.lastSyncTime}}</span>&nbsp;
           <span class="muted">{{availability.synced | nicelyDate}}</span>
         </small>
       </p>
-      <!-- end p2000 footer -->
+      <!-- end footer -->
 
     </div>
   </div>
   <!--Availability list-->
 
 
-
-
-
-
-
-  <!-- row-fluid -->
+  <!-- pies & alarms -->
   <div class="row-fluid">
 
       <!-- pie charts for groups -->
@@ -471,7 +468,7 @@
 
         <hr ng-hide="loading.alerts" class="lastline">
 
-        <!-- p2000 footer -->
+        <!-- footer -->
         <p ng-hide="loading.alerts">
           <small class="pull-left">
             <span class="text-warning">{{ui.planboard.lastSyncTime}}</span>&nbsp;
@@ -484,12 +481,12 @@
             <span ng-hide="capcodes" class="muted">{{config.profile.p2000.codes}}</span>
           </small>
         </p>
-        <!-- end p2000 footer -->
+        <!-- end footer -->
 
       </div>
       <!-- end announcements sidebar -->
 
   </div>
-  <!-- end row-fluid -->
+  <!-- end pies & alarms -->
 
 </section>
