--- a/war/js/views/tv.html
+++ b/war/js/views/tv.html
@@ -54,10 +54,10 @@
           <div class="sa-member"
                ng-repeat="reserve in saMembers.reserves.noplanning">
             <span class="sa-member-icon sa-icon-reserve-noplanning">
-              <strong>G{{$index+1}}</strong>
+              <strong>{{$index+1}}</strong>
             </span>
             <div class="sa-member-card">
-              <h5>Geen planning</h5>
+              <h5>Mogelijk inzetbaar</h5>
               <hr/>
               <span>{{reserve.name}}</span>
             </div>
