--- a/sass/app/_dashboard.scss
+++ b/sass/app/_dashboard.scss
@@ -432,7 +432,7 @@
         display: inline;
         float: left;
         padding: 15px;
-        min-width: 185px;
+        min-width: 230px;
         margin-right: 15px;
 
         .sa-member-icon {
@@ -449,6 +449,7 @@
           margin-bottom: 5px;
           padding-top: 18px;
           background-color: #415e6b;
+
           strong {
             font-size: 24px;
           }
@@ -500,7 +501,7 @@
       margin-top: 25px;
     }
 
-    li#sa-reserves {
+    li.sa-reserves {
 
     }
   }
