--- a/war/js/views/tv.html
+++ b/war/js/views/tv.html
@@ -5,8 +5,7 @@
 
 
     <!--smartAlarming-->
-    <div id="sa"
-         class="widget span9"
+    <div class="sa widget span9"
          ng-show="config.profile.smartAlarm">
 
       <div class="head">
@@ -18,26 +17,26 @@
       <p ng-show="loading.smartAlarm">Indeling SlimAlarmeren lijst laden...</p>
 
       <!--smartAlarming listing-->
-      <ul id="sa-setup"
+      <ul class="sa-setup"
           ng-hide="loading.smartAlarm">
         <!--truck personnel-->
-        <li id="sa-truck">
+        <li class="sa-truck">
           <div class="sa-member"
                ng-repeat="trucker in saMembers.truck | orderBy:'rank'">
             <span class="sa-member-icon {{(trucker.class) && trucker.class}}">
               <strong>{{trucker.icon}}</strong>
             </span>
             <div class="sa-member-card">
-              <h5>{{trucker.role}}</h5>
+              <h5>{{trucker.name}}</h5>
               <hr/>
-              <span>{{trucker.name}}</span>
+              <span>{{trucker.role}}</span>
             </div>
           </div>
         </li>
         <!--end truck personnel-->
 
         <!--reserves personnel-->
-        <li id="sa-reserves">
+        <li class="sa-reserves">
 
           <div class="sa-member"
                ng-repeat="reserve in saMembers.reserves.available">
@@ -45,9 +44,9 @@
               <strong>B{{$index+1}}</strong>
             </span>
             <div class="sa-member-card">
-              <h5>Beschikbaar</h5>
+              <h5>{{reserve.name}}</h5>
               <hr/>
-              <span>{{reserve.name}}</span>
+              <span>Beschikbaar</span>
             </div>
           </div>
 
@@ -57,9 +56,9 @@
               <strong>{{$index+1}}</strong>
             </span>
             <div class="sa-member-card">
-              <h5>Mogelijk inzetbaar</h5>
+              <h5>{{reserve.name}}</h5>
               <hr/>
-              <span>{{reserve.name}}</span>
+              <span>Mogelijk inzetbaar</span>
             </div>
           </div>
 
@@ -69,9 +68,9 @@
               <strong>N{{$index+1}}</strong>
             </span>
             <div class="sa-member-card">
-              <h5>Niet beschikbaar</h5>
+              <h5>{{reserve.name}}</h5>
               <hr/>
-              <span>{{reserve.name}}</span>
+              <span>Niet beschikbaar</span>
             </div>
           </div>
 
