hidden scheduled messaging

--- a/war/js/views/messages.html
+++ b/war/js/views/messages.html
@@ -54,14 +54,14 @@
         </a>
       </li>
 
-      <li class="{{(views.notifications==true || views.scheaduler==true) && 'active'}}"
-        ng-hide="config.profile.smartAlarm">
-        <a href="#notificationsTab" 
-            data-toggle="tab"
-            ng-click="resetViews(); setViewTo('notifications')">
-          <span class="entypo">&#128276;</span> {{ui.message.notifications}}
-        </a>
-      </li>
+      <!--<li class="{{(views.notifications==true || views.scheaduler==true) && 'active'}}"-->
+        <!--ng-hide="config.profile.smartAlarm">-->
+        <!--<a href="#notificationsTab" -->
+            <!--data-toggle="tab"-->
+            <!--ng-click="resetViews(); setViewTo('notifications')">-->
+          <!--<span class="entypo">&#128276;</span> {{ui.message.notifications}}-->
+        <!--</a>-->
+      <!--</li>-->
 
       <li class="{{(views.trash==true ) && 'active'}}">
         <a href="#trashTab" 
