brought back profile selecting during member registering

--- a/war/js/views/groups.html
+++ b/war/js/views/groups.html
@@ -181,8 +181,7 @@
         <form>
           <fieldset>
 
-            <div class="control-group"
-                  ng-hide="config.profile.smartAlarm">
+            <div class="control-group">
               <label class="control-label">{{ui.groups.role}}</label>
               <div class="controls">
                 <select ng-model="memberForm.role"
