hide divisions dropdown when 'everyone' group is selected on dashboard widget

--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -227,6 +227,7 @@
                 ng-selected="current.division"
                 ng-change="getDivisionAvailability()"
                 ng-show="divisions.length > 0"
+                ng-hide="(current.group == 'all')"
                 style="margin-left: 15px; width:160px">
         </select>
         <!-- end divisions list -->
