quick fix for hiding divisions menu when the list is empty

--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -226,8 +226,7 @@
                 ng-options="division.id as division.label for division in divisions"
                 ng-selected="current.division"
                 ng-change="getDivisionAvailability()"
-                ng-show="divisions.length > 0"
-                ng-hide="(current.group == 'all')"
+                ng-show="divisions.length > 0 && (current.group != 'all')"
                 style="margin-left: 15px; width:160px">
         </select>
         <!-- end divisions list -->
