--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -253,8 +253,7 @@
             <div class="sa-member"
                  ng-repeat="member in availability.members.available">
 
-                <span class="sa-member-icon"
-                      style="background-color: {{states[member.state].color}}">
+                <span class="sa-member-icon {{member.style}}">
                   <strong>{{member.label}}{{$index+1}}</strong>
                 </span>
 
@@ -286,8 +285,7 @@
                  ng-repeat="member in availability.members.unavailable"
                  ng-show="(member.state != 'no-state')">
 
-                <span class="sa-member-icon"
-                      style="background-color: {{states[member.state].color}}">
+                <span class="sa-member-icon sa-icon-reserve-unavailable">
                   <strong>{{member.label}}{{$index+1}}</strong>
                 </span>
 
@@ -320,8 +318,7 @@
             <div class="sa-member"
                  ng-repeat="member in availability.members.possible">
 
-            <span class="sa-member-icon"
-                  style="background-color: {{states[member.state].color}}">
+            <span class="sa-member-icon sa-icon-reserve-noplanning">
               <strong>{{member.label}}{{$index+1}}</strong>
             </span>
 
