user delete functionaility has been hooked with backend

--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -132,7 +132,7 @@
 
                     <button type="submit"
                             ng-click="hideDeleteUserForm()"
-                            class="btn">Cancel</button>
+                            class="btn">Annuleer</button>
                   </div>
                 </div>
 
