--- a/sass/bootstrap/_modals.scss
+++ b/sass/bootstrap/_modals.scss
@@ -4,26 +4,26 @@
 
 // Background
 .modal-backdrop {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: $zindexModalBackdrop;
-  background-color: $black;
-  // Fade for backdrop
-  &.fade { opacity: 0; }
+//  position: fixed;
+//  top: 0;
+//  right: 0;
+//  bottom: 0;
+//  left: 0;
+//  z-index: $zindexModalBackdrop;
+//  background-color: $black;
+//  // Fade for backdrop
+//  &.fade { opacity: 0; }
 }
 
 .modal-backdrop,
 .modal-backdrop.fade.in {
-  @include opacity(80);
+  //@include opacity(1);
 }
 
 // Base modal
 .modal {
   position: fixed;
-  top: 10%;
+  top: 20%;
   left: 50%;
   z-index: $zindexModal;
   width: 560px;
@@ -42,7 +42,7 @@
     @include transition(opacity .3s linear, top .3s ease-out);
     top: -25%;
   }
-  &.fade.in { top: 10%; }
+  &.fade.in { top: 20%; }
 }
 .modal-header {
   padding: 9px 15px;
