--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -104,43 +104,11 @@
         <div style="overflow: hidden; height: 35px">
           <h3 style="margin-top: 0;" class="pull-left">{{ui.profile.editProfile}}</h3>
 
-
-          <div ng-switch="deleteUserState">
-
-            <div ng-switch-when="ask">
-              <button type="submit"
-                      ng-click="showDeleteUserForm()"
-                      class="btn btn-danger pull-right">Verwijder gebruiker</button>
-            </div>
-
-            <div ng-switch-when="confirm"
-                 ng-hide="app.resources.role > 1">
-
-              <form class="form-inline pull-right">
-
-                <div class="control-group">
-                  <div class="controls">
-                    <input  type="text"
-                            style="margin-right: 5px"
-                            placeholder="Voornaam van de gebruiker"
-                            ng-model="userName">
-
-                    <button type="submit"
-                            ng-click="deleteUser(userName)"
-                            class="btn btn-danger"
-                            style="margin-right: 10px">Verwijder deze gebruiker</button>
-
-                    <button type="submit"
-                            ng-click="hideDeleteUserForm()"
-                            class="btn">Annuleer</button>
-                  </div>
-                </div>
-
-
-              </form>
-            </div>
-
-          </div>
+          <a href="#deleteUserModal"
+             role="button"
+             class="btn btn-danger pull-right"
+             data-toggle="modal"
+             ng-hide="app.resources.role > 1">Verwijder gebruiker</a>
 
         </div>
         <!-- end tab header -->
@@ -607,3 +575,48 @@
 </div>
 </section>
 <!-- end profile -->
+
+
+
+
+<div id="deleteUserModal"
+     class="modal hide fade"
+     tabindex="-1"
+     role="dialog"
+     aria-labelledby="deleteUserModalLabel"
+     aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="deleteUserModalLabel">Verwijder gebruiker</h3>
+  </div>
+  <div class="modal-body">
+
+    <p>Deze actie verwijdert de gebruiker volledig uit het systeem. Dit kan niet meer ongedaan worden.</p>
+
+    <div class="alert alert-error"
+         ng-show="deleteUserError">
+      <button type="button" class="close" data-dismiss="alert">×</button>
+      {{deleteUserErrorMessage}}
+    </div>
+
+    <form>
+      <div class="control-group">
+        <div class="controls">
+          <input  type="password"
+                  placeholder="Uw wachtwoord"
+                  ng-model="userPassword">
+        </div>
+      </div>
+    </form>
+
+  </div>
+  <div class="modal-footer">
+    <button type="submit"
+            ng-click="deleteUser(userPassword)"
+            class="btn btn-danger"
+            style="margin-right: 10px">Verwijder deze gebruiker</button>
+    <button class="btn"
+            data-dismiss="modal"
+            aria-hidden="true">Annuleer</button>
+  </div>
+</div>
