--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -108,7 +108,7 @@
              role="button"
              class="btn btn-danger pull-right"
              data-toggle="modal"
-             ng-hide="app.resources.role > 1">Verwijder gebruiker</a>
+             ng-hide="app.resources.role > 1">{{ui.profile.remove.title}}</a>
 
         </div>
         <!-- end tab header -->
@@ -120,13 +120,13 @@
 
           <div class="control-group"
                ng-hide="app.resources.role > 2">
-            <label class="control-label">Profiel</label>
+            <label class="control-label">{{ui.profile.role}}</label>
             <div class="controls">
               <select
                 ng-model="data.resources.role"
                 ng-change="changeRole(role)"
                 ng-options="id as label for (id, label) in roles">
-                <option value="">-- kies een profiel --</option>
+                <option value="">-- {{ui.profile.choose}} --</option>
               </select>
             </div>
           </div>
@@ -587,11 +587,11 @@
      aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="deleteUserModalLabel">Verwijder gebruiker</h3>
+    <h3 id="deleteUserModalLabel">{{ui.profile.remove.title}}</h3>
   </div>
   <div class="modal-body">
 
-    <p>Deze actie verwijdert de gebruiker volledig uit het systeem. Dit kan niet meer ongedaan worden.</p>
+    <p>{{ui.profile.remove.info}}</p>
 
     <div class="alert alert-error"
          ng-show="deleteUserError">
@@ -614,9 +614,9 @@
     <button type="submit"
             ng-click="deleteUser(userPassword)"
             class="btn btn-danger"
-            style="margin-right: 10px">Verwijder deze gebruiker</button>
+            style="margin-right: 10px">{{ui.profile.remove.button}}</button>
     <button class="btn"
             data-dismiss="modal"
-            aria-hidden="true">Annuleer</button>
+            aria-hidden="true">{{ui.profile.remove.cancel}}</button>
   </div>
 </div>
