--- a/war/js/views/settings.html
+++ b/war/js/views/settings.html
@@ -11,11 +11,11 @@
     <ul class="nav nav-tabs nav-tabs-app" style="margin-right: 0px;">
 
       <li class="active">
-        <a href="#userSettingsTab" 
+        <a href="settings#userSettingsTab"
             data-toggle="tab"><span class="entypo">&#128100;</span> {{ui.settings.user}}</a>
       </li>
       <li>
-        <a href="#appSettingsTab" 
+        <a href="settings#appSettingsTab"
             data-toggle="tab"><span class="entypo">&#9881;</span> {{ui.settings.application}}</a>
       </li>
     </ul>
