functionality of loggin in automatically through redirected users from knrm.nl

--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -89,6 +89,8 @@
             <dd>{{data.resources.PostZip}}</dd>
           <dt>{{ui.profile.city}}</dt>
             <dd>{{data.resources.PostCity}}</dd>
+          <dt>{{ui.profile.username}}</dt>
+            <dd>{{data.resources.uuid}}</dd>
         </dl>
         <!-- end profile info -->
 
