--- a/sass/app/_dashboard.scss
+++ b/sass/app/_dashboard.scss
@@ -497,6 +497,10 @@
           h5 {
             margin-top: 0px;
             margin-bottom: 5px;
+
+            a {
+              color: $textColor;
+            }
           }
 
           hr {
