--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -104,7 +104,9 @@
             </span>
 
           <div class="sa-member-card">
-            <h5>{{trucker.name}}</h5>
+            <h5>
+              <a href="#/profile/{{trucker.uuid}}#profile">{{trucker.name}}</a>
+            </h5>
             <hr/>
             <span>{{trucker.role}}</span>
           </div>
@@ -123,7 +125,9 @@
             </span>
 
           <div class="sa-member-card">
-            <h5>{{reserve.name}}</h5>
+            <h5>
+              <a href="#/profile/{{reserve.id}}#profile">{{reserve.name}}</a>
+            </h5>
             <hr/>
             <span>Beschikbaar</span>
           </div>
@@ -136,7 +140,9 @@
             </span>
 
           <div class="sa-member-card">
-            <h5>{{reserve.name}}</h5>
+            <h5>
+              <a href="#/profile/{{reserve.id}}#profile">{{reserve.name}}</a>
+            </h5>
             <hr/>
             <span>Niet beschikbaar</span>
           </div>
@@ -157,7 +163,9 @@
             </span>
 
           <div class="sa-member-card">
-            <h5>{{reserve.name}}</h5>
+            <h5>
+              <a href="#/profile/{{reserve.id}}#profile">{{reserve.name}}</a>
+            </h5>
             <hr/>
             <span>Mogelijk inzetbaar</span>
           </div>
@@ -248,7 +256,9 @@
                 </span>
 
               <div class="sa-member-card">
-                <h5>{{member.name | toTitleCase}}</h5>
+                <h5>
+                  <a href="#/profile/{{member.id}}#profile">{{member.name | toTitleCase}}</a>
+                </h5>
                 <hr/>
                 <span>{{states[member.state].label}}</span>
                 <br/>
@@ -280,7 +290,9 @@
                 </span>
 
               <div class="sa-member-card">
-                <h5>{{member.name | toTitleCase}}</h5>
+                <h5>
+                  <a href="#/profile/{{member.id}}#profile">{{member.name | toTitleCase}}</a>
+                </h5>
                 <hr/>
                 <span>{{states[member.state].label}}</span>
                 <br/>
@@ -313,7 +325,9 @@
             </span>
 
               <div class="sa-member-card">
-                <h5>{{member.name | toTitleCase}}</h5>
+                <h5>
+                  <a href="#/profile/{{member.id}}#profile">{{member.name | toTitleCase}}</a>
+                </h5>
                 <hr/>
                 <span>{{states[member.state].label}}</span>
 
