--- a/war/js/views/messages.html
+++ b/war/js/views/messages.html
@@ -342,11 +342,17 @@
         <!-- message view -->
         <dl>
           <dt>{{ui.message.sender}}</dt>
-            <dd>{{message.requester|convertEve|convertUserIdToName}} </dd>
+            <dd>
+              <a href="#/profile/{{message.requester|convertEve}}#profile">
+                {{message.requester|convertEve|convertUserIdToName}}
+              </a>
+            </dd>
           <dt>{{ui.message.receviers}}</dt>
             <dd>
               <span ng-repeat="receiver in message.responder">
-                {{receiver|convertEve|convertUserIdToName}}, 
+                <a href="#/profile/{{receiver|convertEve}}#profile">
+                  {{receiver|convertEve|convertUserIdToName}}
+                </a>,
               </span>
             </dd>
           <dt>{{ui.message.date}}</dt>
